# iLCUtil

./: CMakeLists.txt
cmakemodules/: ilcsoft_default_cxx_flags.cmake
logplus/: CMakeLists.txt
logplus/examples/: logplus-print-levels.cc  logplus-simple.cc
logplus/source/include/logplus/: config.h  formatter.h  logger.h  loglevels.h  logplus.h  sink.h  streamlogplus.h
logplus/source/src/: logger.cc  sink.cc
streamlogplus/: CMakeLists.txt
streamlogplus/examples/: streamlog-simple.cc
streamlogplus/source/include/streamlogplus/: config.h  formatter.h  loglevels.h
streamlogplus/source/src/: logger.cc
